test_programs/compile_failure/regression_4828/src/main.nr
// TODO(https://github.com/noir-lang/noir/issues/7763): regression of #4828
fn main() {
    main();
}
